gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-impl_trait_in_fn_trait_return_dg.rs
fn f() -> impl Fn() -> impl Sized { || () }
// { dg-error ".E0562." "" { target *-*-* } .-1 }
fn g() -> &'static dyn Fn() -> impl Sized { &|| () }
// { dg-error ".E0562." "" { target *-*-* } .-1 }

fn main() {}

